# nemoclaw-setup

./: .flake8  .gitignore  .mcp.json  3d_bridge.py  ALICE_CAPABILITIES.md  ISSUE.md  Modelfile  POLICY.md  README.md  REPLICATION-NOTES.md  SETUP-MODELS.md  TROUBLESHOOTING.md  alice_monitor.py  alice_signal.py  chat.sh  heartbeat.py  launch.sh  mypy.ini  phase_5_alice_demo  project  pyproject.toml  ruff.toml  signal.sh  src  telegram_cli.py  test_stack.sh
.clinerules/: 00-policy.md  02-lifecycle.md
.github/workflows/: test.yml
.mark/: info.md
CORE_AI_DIRECTIVES/: IDENTITY.md  SOUL.md
alice/: ALICE.md  MEMORY-EXTRACTOR.md  MEMORY_SEED.md
archived_governance/.clinerules/: 01-file-format.md  03-failure-handling.md  04-qwen-coder.md  README.md
archived_governance/CORE_AI_DIRECTIVES/: ALICE_CAPABILITIES.md  IDENTITY.md  PRINCIPLES.md
config/: .env.example  default.yaml  openclaw.json
core/: forge_server.py  requirements.txt
data/: ALICE.md  cyberland.db.legacy.bak
deprecated/: memory_extractor.py
nemoclaw/: __init__.py  __main__.py  config.py  models.py
past_experiments/: tts_engine.py  video_duration_matcher.py
project/: REPLICATION-NOTES.md  SOUL.md  TROUBLESHOOTING.md
project_backup_20260401_1100/: .gitignore  ISSUE.md  SESSION-SUMMARY-RICO-DEBUG-2025-11-06.md
tests/: ERROR_LOOP_DEBRIEF.md  VERIFICATION_REPORT.md  functional_test.txt  stress_test_alice.py  test_agent_loop.py  test_browser.py  test_clause_guards.py  test_config.py  test_gemma4_stability.py  test_integration.py  test_memory_extractor.py  test_memory_store.py  test_multistep_harness.py  test_prompt.py  test_session_manager.py  test_tools.py
(+59 files in other folders)
