[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemoclaw"
version = "0.1.0"
description = "NemoClaw agent harness — a tool-using AI assistant framework"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
nemoclaw = "nemoclaw.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["nemoclaw"]
